#	$Id$	

Changelog for HylaFAX 4.2.0

* fix truncation of last byte on sent MMR data (09 Aug 2004)
* fix end of page signals and padding (23 Jul 2004)
* prevent internationalization from interfering with build (22 Jul 2004)
* restrict faxq to prepare only single-strip TIFF data (29 Jun 2004)
* only use normal and fine resolutions when not using XVRes (28 Jun 2004)
* limit fax retrains to allowed moments (28 Jun 2004)
* change DynamicLocalID to DynamicConfig (22 Jun 2004)
* fix V.17 fallbacks after the CTC/CTR exchange (21 Jun 2004)
* tune setting of -rpath when linking on linux (21 Jun 2004)
* add admin option and dialstring alteration to faxalter (20 Jun 2004)
* add -end option for xferfaxstats and recvstats (17 Jun 2004)
* add DynamicLocalID config option (17 Jun 2004)
* prevent CID values from acquiring data when unset (1 Jun 2004)
* add ModemReadyCmds config option (1 Jun 2004)
* improve and fix several no-modem-response timeouts (31 May 2004)
* fix an error in faxq when adding a job that had a no_formatter
  error to the sleep queue (31 May 2004)
* fix rare faxsend segfault in Class 1 scanline padding (27 May 2004)
* utilize DesiredBR to determine what modulation to use (24 May 2004)
* remove Class1EnableV34Cmd from modem initialization (22 May 2004)
* avoid V.29-to-V.17 fallback transitions (22 May 2004)
* fix send V.34-Fax cases where receiver reports no ECM (21 May 2004)
* add prototype support for Perle/MultiTech-SMI modems (21 May 2004)
* fix segfault with Class2RTFCC (21 May 2004)
* add V.34-Fax disconnection recognition during prologue (20 May 2004)
* add prototype support for Mainpine RockForceDUO+ (19, 21 May 2004)
* improve V.34-Fax session abortion handling (19 May 2004)
* add more prototype support for Courier V.Everything modems (19 May 2004)
* add '-l bindaddr' option to hfaxd (8 May 2004)
* fix build for 64-bit Linux (8 May 2004)
* fix error in clients when sender identity was whitespace only (8 May 2004)